# awesomepower-django-vue

./: .pre-commit-config.yaml  README.md  app.json  codecov.yml  netlify.toml
.github/workflows/: cypress.yml  test.yml
backend/: .coveragerc  .gitignore  .tool-versions  Pipfile  Procfile  conftest.py  manage.py  pyproject.toml  pytest.ini  restore_db_from_prod.sh
backend/awesomepower/: middleware.py  models.py  permissions.py  settings.py  urls.py  wsgi.py
backend/awesomepower/plans/: apps.py  business_logic.py  factories.py  models.py  serializers.py  tdus.py  tests.py  views.py
backend/awesomepower/plans/management/commands/: printstatus.py  seed.py  shell.py  updateplans.py  updatetdusproviders.py
backend/awesomepower/plans/migrations/: 0001_initial.py
backend/awesomepower/plans/providers/: Ambit.py  Amigo.py  Apge.py  Brilliant.py  Champion.py  Chariot.py  Cirro.py  Constellation.py  Cpl.py  Direct.py  Discount.py  Eligo.py  EnergyToGo.py  Entrust.py  Express.py  First.py  FourChange.py  Frontier.py  Gexa.py  GreenEnergy.py  GreenMountain.py  GridPlus.py  Hello.py  Iberdrola.py  Infinite.py  Infuse.py  Just.py  Liberty.py  LoneStar.py  MidAmerican.py  NewPower.py  Our.py  Payless.py  Pogo.py  PowerNext.py  PowerOfTexas.py  Pulse.py  Reliant.py  SouthernFederal.py  SouthwestPower.py  (+15 more)
web/: .eslintrc.js  .gitignore  .prettierignore  components.d.ts  cypress.json  index.html  nuxt.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite-plugin-istanbul.js  vite-plugin-istanbul.ts  vite.config.js  vite.config.ts
web/app/: router.scrollBehavior.js
web/assets/css/: base.css  tailwind.css  transitions.css
web/components/: AppFooter.vue  AppHeader.vue
web/components/Landing/: FaqsItem.vue  ViewPlans.vue
web/components/Plans/: PlanCard.vue  StarGroup.vue
web/components/global/: AppButton.vue  LoadingSpinner.vue  TransitionExpand.vue
web/cypress/integration/: landing.spec.js  plans.spec.js
web/cypress/plugins/: index.js
web/cypress/support/: assertions.js  commands.js  index.js
web/layouts/: default.vue  error.vue
web/pages/: index.vue  privacy.vue  terms.vue
web/plugins/: global.js
web/public/tests/: efl.html
web/src/: App.vue  index.css  main.js  main.ts  router.js  router.ts  types.ts
web/src/components/: AppFooter.vue  AppHeader.vue
web/src/global/: index.js  index.ts
web/src/pages/: [not-found].vue  index.vue  privacy.vue  terms.vue
web/src/plugins/: api.js  api.ts  global-components.js
web/src/store/: index.js
web/store/: plans.js
(+23 files in other folders)
