[tool.poetry]
name = "awesomepower"
version = "1.0.0"
description = ""
authors = ["Michael Hays <michaelhays36@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Django = "^3.2.7"
django-cors-headers = "^3.8.0"
djangorestframework = "^3.12.4"
dj-database-url = "^0.5.0"
factory-boy = "^3.2.0"
google-cloud-vision = "^2.4.2"
gunicorn = "^20.1.0"
html2text = "^2020.1.16"
pandas = "^1.3.2"
pdf2image = "^1.16.0"
psycopg2-binary = "^2.9.1"
requests = "^2.26.0"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
ptpython = "^3.0.19"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-django = "^4.4.0"
pytest-dotenv = "^0.5.2"
python-dotenv = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
