[tool.poetry]
name = "awesomepower"
version = "1.0.0"
description = ""
authors = ["Michael Hays <michaelhays36@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
Django = "^4.0"
django-cors-headers = "^3.10.1"
djangorestframework = "^3.13.1"
dj-database-url = "^0.5.0"
factory-boy = "^3.2.1"
google-cloud-vision = "^2.6.3"
gunicorn = "^20.1.0"
html2text = "^2020.1.16"
pandas = "^1.3.5"
pdf2image = "^1.16.0"
psycopg2-binary = "^2.9.3"
requests = "^2.26.0"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
ptpython = "^3.0.20"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
pytest-dotenv = "^0.5.2"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
